--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-router-dom": "^5.0.0",
     "style-loader": "^0.23.1",
     "webpack-dev-server": "^3.2.1"
   },
