--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/polyfill": "^7.4.0",
+    "axios": "^0.18.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "webpack-dev-server": "^3.2.1"
   },
