--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/polyfill": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.0-beta.6",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.5",
@@ -25,10 +30,11 @@
     "webpack-dev-server": "^3.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "7",
+    "babel-jest": "^24.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "jest": "^24.6.0",
+    "react-test-renderer": "^16.8.6",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
