--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "babel-loader": "^8.0.0-beta.6",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
