--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.0-beta.6",
     "babel-polyfill": "^6.26.0",
+    "codeclimate-test-reporter": "^0.5.1",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
