--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ cache:
   directories:
     - "node_modules"
 before_script:
-  - npm install -g codeclimate-test-reporter
+  - npm install -g codeclimate-test-reporter yarn
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-script: npm test:coverage
+script: yarn run test:coverage
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 after_success:
