--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "jest",
+    "test": "jest -u",
     "start:prod": "node server.js",
     "test:coverage": "jest --coverage --colors --updateSnapshot"
   },
